--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ nav li {
 }
 
 nav a {
-  color: #007acc;
+  color: #3dafe8;
   text-decoration: none;
   font-weight: 400;
 }
@@ -51,11 +51,19 @@ main {
   padding: 0 20px;
 }
 
+h1 {
+  color:#3dafe8;
+}
+
 h2 {
+  color:#2b427e;
   font-size: 1.6rem;
   border-bottom: 2px solid #eee;
   padding-bottom: 6px;
   margin-top: 40px;
+}
+
+P{text-indent: 50px；
 }
 
 ul {
